[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "torch-device-manager"
version = "0.1.0"
description = "A simple abstraction that supports inferencing Torch models on a variety of hardware"
authors = [{name = "George Kramer", email = "12485591+gtkramer@users.noreply.github.com"}]
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "psutil",
    "py-cpuinfo"
]

[project.urls]
homepage = "http://yourproject.homepage/"
repository = "http://github.com/yourusername/yourproject"
documentation = "http://yourproject.readthedocs.io/"
